# bmicalculator

./: .gitignore  Cargo.toml  README.md  app.schubidu.BmiCalculator.json  cargo-sources.json  io.github.johannesboehler2.BmiCalculator.json  meson.build
.github/workflows/: ci.yml  release.yml
build-aux/: dist-vendor.sh
data/: app.schubidu.BmiCalculator.desktop.in  app.schubidu.BmiCalculator.gschema.xml  app.schubidu.BmiCalculator.metainfo.xml.in  io.github.johannesboehler2.BmiCalculator.desktop.in  io.github.johannesboehler2.BmiCalculator.gschema.xml  io.github.johannesboehler2.BmiCalculator.metainfo.xml.in  meson.build
data/icons/: meson.build
data/screenshots/: screenshot-dark-phone-landscape.xcf  screenshot-dark-phone-portrait.xcf
data/styles/: style-dark.css  style.css
po/: LINGUAS  POTFILES  de.po  it.po  meson.build  nl.po  pt_BR.po
src/: application.rs  bmicalculator.gresource.xml  config.rs  main.rs  meson.build  preferences.rs  preferences.ui  window.rs  window.ui
